@@ -558,6 +558,7 @@ public class CMProps extends Properties
 		GENDERS,
 		ISO_LANG_CODES,
 		CORPSE_BLURBS,
+		ANIMAL_ORDER_LIST,
 		WEATHER_CLEAR, // try to always and forever keep these at the end...
 		WEATHER_CLOUDY, // try to always and forever keep these at the end...
 		WEATHER_WINDY, // try to always and forever keep these at the end...
