@@ -1994,7 +1994,9 @@ Example : order dog flee\n\r\
 Short(s): \n\r\
 If your character has any followers, whether characters or mobs, this command \
 will allow you to force that follower to perform any command listed in the \
-COMMANDS or SOCIALS list. See also GROUP, FOLLOW, NOFOLLOW, FORMATION, and GTELL.
+COMMANDS or SOCIALS list.  If the follower is an animal, or does not understand \
+your language, then the types of orders that may be given is severely limited. \
+See also GROUP, FOLLOW, NOFOLLOW, FORMATION, and GTELL.
 
 PAGEBREAK=\
 Command : PAGEBREAK\n\r\
