@@ -652,6 +652,11 @@ EXP_CHART=	0,\
 			386500,\
 			391500
 
+# List of command keywords that can be given to animal followers
+ANIMAL_ORDER_LIST=EAST,WEST,UP,DOWN,NORTH,SOUTH,FOREWARD,AFT,RIGHT,LEFT,FLAP,CRAWL,\
+			ATTACK *,KILL *,MURDER *,FIGHT *,STAY(AUTOGUARD ON),COME(AUTOGUARD OFF),AUTOGUARD *,\
+			EAT *,DRINK *,FLEE *,SIT,STAND
+
 # What users see what the time of day changes and they are outside.  
 # Entries are Dawn, Day, Dusk, Night
 TOD_CHANGE_OUTSIDE= \
