@@ -76,6 +76,7 @@
  74. New item type: GenBurnOven -- an oven that requires burning fuel inside.
  75. New Property: TriggeredAffects, for having effects that are triggered :)
  76. New race: Rust Monster
+ 77. ORDER now works with animal followers for specific commands in LISTS.INI file
  
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
